# rust-web-chat

./: .gitignore  Cargo.toml  README.md  index.html  users.db
auth/: login.html  register.html
src/: auth.rs  chat.rs  handlers.rs  lib.rs  main.rs  state.rs  staticfiles.rs
static/css/: base.css
templates/: base.html  index.html
templates/auth/: login.html  register.html
