[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.7.7", features = ["cookie"] }
axum-macros = "0.3.8"
serde = "1.0.183"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version =  "1.30.0", features = ["full"] }

[dev-dependencies]
axum-macros = "0.3.8"
