[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
minijinja = { version = "1.0.6", features = ["loader"] }
rusqlite = "0.29.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version =  "1.30.0", features = ["full"] }

[dev-dependencies]
axum-macros = "0.3.8"
